# yt-studio

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  start.sh  test.py
backend/: __init__.py  main.py
frontend/: __init__.py  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
plot_quokka/: __init__.py  config.py  dataset.py  params.py  plotting.py
yt_studio/: __init__.py  cli.py
